swagger doc update and API changes
