# server/healthcheck/routes.py
@@ -5,6 +5,12 @@ from sanic.response import json
 health_check_blueprint = Blueprint('healthcheck', url_prefix='/healthcheck')
 
 
+class ServiceHealthReport(dict):
+    def __init__(self, service, health):
+        self['service'] = service
+        self['health'] = health
+
+
 def mongo_health(request: Request) -> (dict, int):
     from core.utils import check_for_connection_error
 
@@ -60,30 +66,33 @@ async def elastic_search_health(request: Request) -> (dict, int):
 
 
 # Define healthcheck API
-@health_check_blueprint.route("/", strict_slashes=True)
+@health_check_blueprint.route("/")
 async def health_check(request: Request):
     from config_core import USER_RECOMMENDATION_ENABLED
 
-    health = {}
+    health = []
     code = 200
 
     es_health, es_code = await elastic_search_health(request)
 
     if es_code == 200:
-        health['elasticsearch'] = 'available'
+        es_health_status = ServiceHealthReport("elasticsearch", "available")
     else:
-        health['elasticsearch'] = 'unavailable'
+        es_health_status = ServiceHealthReport("elasticsearch", "unavailable")
         code = 500
+    health.append(es_health_status)
 
     if USER_RECOMMENDATION_ENABLED:
         mdb_health, mdb_code = mongo_health(request)
 
         if mdb_code == 200:
-            health['mongoDB'] = 'available'
+            mongo_health_status = ServiceHealthReport("mongoDB", "available")
         else:
-            health['mongoDB'] = 'unavailable'
+            mongo_health_status = ServiceHealthReport("mongoDB", "unavailable")
             # Return a 202 ACCEPTED (certain parts of the app will continue to
             # work as normal)
             code = 202
+
+        health.append(mongo_health_status)
 
     return json(health, code)
